--- a/Funny Number 10Sep/Base.lproj/Main.storyboard
+++ b/Funny Number 10Sep/Base.lproj/Main.storyboard
@@ -47,7 +47,11 @@
                                 <items>
                                     <barButtonItem systemItem="action" id="YTR-jO-w5E"/>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="nxZ-kG-FXE"/>
-                                    <barButtonItem systemItem="refresh" id="L9G-50-eIj"/>
+                                    <barButtonItem systemItem="refresh" id="L9G-50-eIj">
+                                        <connections>
+                                            <action selector="homeButton:" destination="BYZ-38-t0r" id="5QO-Jo-gXI"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="jee-d8-2hs"/>
                                     <barButtonItem systemItem="organize" id="xbi-3f-LAV"/>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="QJY-S0-sw6"/>
@@ -63,6 +67,10 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="if_3_2509369.png" translatesAutoresizingMaskIntoConstraints="NO" id="fUL-jl-NcF">
+                                <rect key="frame" x="87" y="82" width="200" height="154"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
@@ -72,10 +80,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
+            <point key="canvasLocation" x="-791" y="170"/>
         </scene>
     </scenes>
     <resources>
         <image name="ic_save.png" width="24" height="24"/>
+        <image name="if_3_2509369.png" width="512" height="512"/>
     </resources>
 </document>
