--- a/Funny Number 10Sep/Base.lproj/Main.storyboard
+++ b/Funny Number 10Sep/Base.lproj/Main.storyboard
@@ -107,7 +107,11 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Show ONE" id="Xp1-X0-i7d">
-                                        <barButtonItem key="leftBarButtonItem" image="ic_keyboard_arrow_left_2x.png" id="e0e-v5-oT9"/>
+                                        <barButtonItem key="leftBarButtonItem" image="ic_keyboard_arrow_left_2x.png" id="e0e-v5-oT9">
+                                            <connections>
+                                                <segue destination="BYZ-38-t0r" kind="show" id="tSb-EF-V6z"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -115,9 +119,17 @@
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
-                                    <barButtonItem systemItem="play" id="hKZ-ik-UUi"/>
+                                    <barButtonItem systemItem="play" id="hKZ-ik-UUi">
+                                        <connections>
+                                            <action selector="playButton:" destination="0nY-79-8v5" id="wea-Ox-hwb"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Vu0-WR-OOM"/>
-                                    <barButtonItem systemItem="pause" id="n3s-jL-Czk"/>
+                                    <barButtonItem systemItem="pause" id="n3s-jL-Czk">
+                                        <connections>
+                                            <action selector="stopButton:" destination="0nY-79-8v5" id="igf-zz-dsZ"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="One" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="afb-b8-o2o">
@@ -130,10 +142,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="numberLabel" destination="afb-b8-o2o" id="2VU-YI-xmw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cin-Ne-9jL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-26.399999999999999" y="869.41529235382313"/>
+            <point key="canvasLocation" x="-26" y="949"/>
         </scene>
         <!--TimerViewController-->
         <scene sceneID="5Dp-DU-fKk">
@@ -209,4 +224,7 @@
         <image name="ic_save.png" width="24" height="24"/>
         <image name="if_3_2509369.png" width="512" height="512"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="tSb-EF-V6z"/>
+    </inferredMetricsTieBreakers>
 </document>
